--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,23 @@ a:visited {
 	color: var(--nightlife)
 }
 
+footer {
+	display: flex;
+	flex-direction: column;
+	color: var(--flamingo-);
+	background-color: var(--eclipse);
+	font-family: var(--font-title), Arial, Helvetica, sans-serif;
+	padding: 2px;
+	text-align: center;
+	margin: 3em -2em -1em -2em;
+	/* border-top: var(--eclipse) solid 6px; */
+}
+
+footer p {
+	color: var(--flamingo-);
+	font-size: 2vh;
+}
+
 .nav-bar {
 	display: grid;
 	grid-template-columns: 15% 75%;
