--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
 
 body {
 	background-color: #FBFDEC;
-	margin: 1em;
+	margin: 1.5em;
 }
 
 h1 {
@@ -112,7 +112,7 @@ footer {
 	font-family: var(--font-title), Arial, Helvetica, sans-serif;
 	padding: 2px;
 	text-align: center;
-	margin: 3em -1em -1em -1em;
+	margin: 3em -1.5em -1.5em -1.5em;
 	/* border-top: var(--eclipse) solid 6px; */
 }
 
@@ -222,9 +222,9 @@ a {
   /* background-color: #fff; */
 }
 
-.header li a {
+.header li a { /* causing margin space */
   display: block;
-  padding: 10px 50px;
+  padding: 30px 40px 30px 0;
   text-decoration: none;
 }
 
@@ -318,9 +318,9 @@ a {
   .header li {
     float: left;
   }
-  .header li a {
+  /* .header li a {
     padding: 30px 20px;
-  }
+  } */
   .header .menu {
     clear: none;
     float: right;
@@ -363,7 +363,7 @@ and (max-width: 425px) {
 		display: grid;
 		grid-template-columns: 1fr;
 		align-items: center;
-		gap: 30px 20px;
+		gap: 30px 8px;
 		margin: 2em;
 	}
 }
