--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ h1 {
 	font-family: var(--font-title);
 	font-size: 4.5vw;
 	margin: -0.25em 0 0 0.5em;
+	position: relative;
+	letter-spacing: 2px;
+
 }
 
 h2 {
@@ -69,16 +72,17 @@ h2 {
 	color: var(--flamingo-);
 	letter-spacing: 1px;
 	text-align: center;
-	margin: 1em 0 1em 0;
+	margin: 1em 0 -0.5em 0;
+	padding: 60px 0;
 }
 
 p {
 	font-family: var(--font-text);
-	font-size: 1.1vw;
+	font-size: 1.4vw;
 	color: var(--nightlife);
 	word-spacing: 2px;
 	line-height: 25px;
-	margin: 4em 15em;
+	margin: 3em 10em;
 	max-width: 115ch;
 }
 
@@ -214,8 +218,8 @@ a {
 	position: fixed;
   width: 100%;
   z-index: 3;
-	margin: -5em -1.5em;
-	padding-top: 8px;
+	margin: -4em -1.5em;
+	padding-top: 10px;
 }
 
 .header ul {
@@ -335,7 +339,7 @@ a {
   }
 }
 
-/* media query 1000, tablet */
+/* media query 1000, 1024 tablet */
 
 @media screen
 and (max-width: 1000px) {
@@ -357,6 +361,108 @@ and (max-width: 1000px) {
 		gap: 30px 20px;
 		margin: 2em;
 	}
+}
+
+@media screen
+and (max-width: 1024px) {
+	.header {
+		background-color: var(--eclipse);
+		position: fixed;
+		width: 100%;
+		z-index: 3;
+		margin: -4em -1.5em;
+		padding-top: 20px;
+	}
+	.header li a { 
+		display: none;
+		padding: 25px 50px 20px 0;
+		text-decoration: none;
+	}
+	.topnav .search-container {
+		display: none;
+	}
+	h1 {
+		color: var(--orchid-);
+		font-family: var(--font-title);
+		font-size: 5vw;
+		margin: -0.4em 0 0 .2em;
+		position: relative;
+	}
+	/* menu */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  display: flex;
+  padding: 20px;
+	justify-content: right;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon {
+  background: var(--orchid-);
+  display: block;
+  height: 2px;
+  position: right;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background: var(--orchid-);
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
 }
 
 /* mobile queries (320, 425) */
