--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'funtonalie';
-	src: url('/fonts/funtonalie/Funtonalie.ttf') format('truetype');
+	src: url('../fonts/funtonalie/Funtonalie.ttf') format('truetype');
 	font-weight: normal;
   font-style: normal;
 	font-display: swap;
@@ -73,7 +73,24 @@ h2 {
 	letter-spacing: 1px;
 	text-align: center;
 	margin: 1em 0 -0.5em 0;
-	padding: 60px 0;
+	padding: 120px 0 40px 0;
+}
+
+h3 {
+	font-family: var(--font-light);
+	font-size: 200%;
+	color: var(--flamingo-);
+	margin: 0.5em 0;
+}
+
+li {
+	font-family: var(--font-light);
+	font-size: 150%;
+	color: var(--nightlife);
+	line-height: 1.3;
+	padding: 4px;
+	margin-left: 30px;
+
 }
 
 p {
@@ -95,7 +112,6 @@ nav {
 }
 
 a {
-	/* margin-right: 1em; */
 	text-decoration: none;
 	color: var(--flamingo-);
 }
@@ -124,13 +140,35 @@ footer p {
 	font-size: 2vh;
 }
 
-/* .no-results {
-	color: var(--nightlife);
+button {
+	background-color: var(--orchid-);
+	border-radius: 10px;
+	color: var(--pearl-powder);
+	font-family: var(--font-light);
+	cursor: pointer;
 	font-size: 200%;
-	padding: 9em 5rem;
-	margin: 2em;
-	text-align: center;
-} */
+	padding: 10px 20px;
+	border: none;
+	margin: 0 0.6em;
+}
+
+button:hover {
+  background-color: var(--nightlife);
+	color: var(--flamingo-);
+	font-family: var(--font-bold);
+	transform: scale(1.1);
+}
+
+.categories{
+	margin: -1em 5em;
+	padding: 20px;
+	display: flex;
+	justify-content: center;
+
+}
+
+
+/*no search*/
 
 .nothing-found {
 	display: flex;
@@ -153,6 +191,8 @@ footer p {
 	margin: 0;
 }
 
+/*no search*/
+
 .nav-bar {
 	display: grid;
 	grid-template-columns: 15% 75%;
@@ -170,6 +210,8 @@ hr.solid {
 	font-weight: 900;
 }
 
+/*search bar*/
+
 .topnav .search-container {
   display: flex;
   justify-content: center;
@@ -185,11 +227,25 @@ hr.solid {
 	border: 3px solid var(--nightlife)
 }
 
+/*search bar*/
+
 .placeholder-image {
 	display: block;
 	margin: 0 auto;
 	width: 50%;
 	height: auto;
+}
+
+.placeholder-image img {
+	margin: 0 auto;
+	width: auto;
+	height: 30%;
+}
+
+a.recipe-image img{ 
+	width: auto;
+	height: 45%;
+	padding: 10px;
 }
 
 .recipe-grid {
@@ -228,6 +284,40 @@ a {
 	font-size: 3.5vh;
 }
 
+.recipe-div {
+	display: grid;
+	grid-template-columns: 1fr 50%;
+	column-gap: 30px;
+	margin: 5em 2em -20em 2em;
+}
+
+.blurb-div p {
+	margin: 1em 1em;
+}
+
+.ingredients-div {
+	align-items: center;
+}
+
+.about {
+	display: grid;
+	grid-template-columns: 35% 65%;
+	column-gap: 20px;
+	margin: 1em 5em 5em 5em;
+	justify-content: center;
+}
+
+.about p {
+	margin: 0 1em;
+	padding: 2em;
+}
+
+.about-image {
+	width: 100%;
+	height: auto;
+	align-self: center;
+	justify-self: center;
+}
 
 /*hamburger menu*/
 
