--- a/css/style.css
+++ b/css/style.css
@@ -95,11 +95,11 @@ li {
 
 p {
 	font-family: var(--font-text);
-	font-size: 1.4vw;
+	font-size: 140%;
 	color: var(--nightlife);
 	word-spacing: 2px;
-	line-height: 25px;
-	margin: 3em 10em;
+	line-height: 1.3;
+	margin: 3em 6em;
 	max-width: 115ch;
 }
 
@@ -147,7 +147,7 @@ button {
 	font-family: var(--font-light);
 	cursor: pointer;
 	font-size: 200%;
-	padding: 10px 20px;
+	padding: 20px 15px;
 	border: none;
 	margin: 0 0.6em;
 }
@@ -179,10 +179,11 @@ button:hover {
 
 .sad-glass {
 	width: 5vw;
-	height: 9vh;
+	height: auto;
 	padding: 5px;
 	align-self: center;
 	justify-self: center;
+	font-size: 140%;
 }
 
 .no-results {
@@ -208,6 +209,14 @@ hr.solid {
 .bold {
 	font-family: var(--font-bold);
 	font-weight: 900;
+}
+
+.search-found {
+	display: flex;
+	justify-content: center;
+	align-self: center;
+	padding: 7em;
+	margin: 4em;
 }
 
 /*search bar*/
@@ -288,7 +297,7 @@ a {
 	display: grid;
 	grid-template-columns: 1fr 50%;
 	column-gap: 30px;
-	margin: 5em 2em -20em 2em;
+	margin: 5em 2em -15em 2em;
 }
 
 .blurb-div p {
@@ -353,7 +362,7 @@ a {
 .header .logo {
   display: block;
   float: left;
-  font-size: 2vw;
+  font-size: 140%;
   padding: 10px 20px;
   text-decoration: none;
 	position: relative;
@@ -439,7 +448,7 @@ a {
 
 /* media queries */
 
-/* tablet queries (1000, 1024) */
+/* tablet queries (1000, 1024, 1200) */
 
 @media screen
 and (max-width: 1000px) {
@@ -450,13 +459,20 @@ and (max-width: 1000px) {
 		gap: 30px 20px;
 		margin: 2em;
 	}
-	.topnav .search-container {
-		display: none;
+	.about {
+	display: grid;
+	grid-template-columns: 1fr;
+	margin: 1em -1em;
 	}
+	.about img {
+		width: 70%;
+		height: auto;
+	}
+
 }
 
 @media screen
-and (min-width: 1024px) {
+and (min-width: 1200px) {
 	h1 {
 		margin-right: 40px;
 	}
@@ -474,8 +490,61 @@ and (min-width: 1024px) {
 	
 }
 
+@media screen
+and (max-width: 1200px) {
+	.topnav .search-container {
+		display: none;
+}
+	.categories {
+		display: grid;
+		grid-template-columns: 30% 30%;
+		font-size: 130%;
+		margin: 0 1em;
+		row-gap: 30px;
+	}
+hr.solid {
+	margin: 3em 8em;
+}
+.recipe-div {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+	margin: 3em;
+	column-gap: 20px;
+}
+a.recipe-image img {
+	width: 100%;
+	height: auto;
+}
+.sad-glass {
+	width: 7vw;
+	height: auto;
+}
+}
 
-/* mobile queries (320, 425) */
+
+
+
+/* mobile queries (750, 320, 425) */
+
+@media screen
+and (max-width: 750px) {
+	.categories {
+		display: grid;
+		grid-template-columns: 1fr;
+		row-gap: 50px;
+		padding: 80px 90px;
+		margin: 1em 4em;
+
+	}
+hr.solid {
+	margin: 3em 8em
+}
+.sad-glass {
+	width: 9vw;
+	height: auto;
+}
+}
 
 @media screen
 and (max-width: 425px) {
@@ -485,6 +554,10 @@ and (max-width: 425px) {
 		align-items: center;
 		gap: 30px 8px;
 		margin: 2em;
+	}
+	.sad-glass {
+		width: 11vw;
+		height: auto;
 	}
 }
 
