--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
 }
 
 body {
-	background-color: #FBFDEC;
+	background-color: var(--pearl-powder);
 	margin: 1.5em;
 }
 
@@ -554,6 +554,12 @@ and (max-width: 425px) {
 		align-items: center;
 		gap: 30px 8px;
 		margin: 2em;
+	}
+	p {
+		margin: 1.5em;
+	}
+	h2 {
+		padding-top: 30px;
 	}
 	.sad-glass {
 		width: 11vw;
