--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,8 @@ body {
 h1 {
 	color: var(--orchid-);
 	font-family: var(--font-title);
-	font-size: 4.5vw;
-	margin: -0.25em 0 0 0.5em;
+	font-size: 4.2vw;
+	margin: -0.20em 0 0 0.2em;
 	position: relative;
 	letter-spacing: 2px;
 
@@ -89,7 +89,7 @@ li {
 	color: var(--nightlife);
 	line-height: 1.3;
 	padding: 4px;
-	margin-left: 30px;
+	margin-left: 50px;
 
 }
 
@@ -171,6 +171,12 @@ button:hover {
 
 .footer-links {
 	font-size: 180%;
+}
+
+/* home page */
+
+#intro {
+	color: var(--nightlife);
 }
 
 /* cuisine */
@@ -336,16 +342,28 @@ hr.solid {
 .menu {
 	width: 75%;
 	display: flex;
+	column-gap: 3px;
 	flex-direction: row;
 }
 
 form {
 	width: 30%;
+	display: flex;
+	justify-content: center;
+}
+
+.search-container {
+	display: flex;
+	justify-content: center;
+	border-bottom: 3px solid var(--eclipse);
+	padding: 20px 100px;
+	margin: 0 -1.5em;
+
 }
 
 .topnav input[type=text] {
-  padding: 10px 8em;
-  margin-top: 1.2em;
+  padding: 10px 10em;
+  margin-top: 5em;
   font-size: 14px;
 	text-align: center;
   border-radius: 10px;
@@ -447,7 +465,7 @@ border: 2px solid var(--flamingo-);
 	position: fixed;
   width: 100%;
   z-index: 3;
-	margin: -4em -1.5em;
+	margin: -1.5em -1.5em;
 	padding-top: 10px;
 }
 
