--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,29 @@ button:hover {
 
 /* home page */
 
+.nibbly-container {
+	display: flex;
+	flex-direction: row;
+	margin: 5em 2em;
+}
+
+.nibbly-colors {
+	margin-left: 6em;
+	margin-right: 9em;
+}
+
+.home-text {
+	font-size: 180%;
+	margin: 0 1em;
+	align-self: center;
+	justify-content: center;
+	text-align: center;
+}
+
+#home-bold {
+	margin-left: 3em;
+}
+
 #intro {
 	font-size: 430%;
 	color: var(--flamingo-);
@@ -486,6 +509,8 @@ border: 2px solid var(--flamingo-);
 }
 
 .header {
+	display: flex;
+	justify-content: space-between;
 	background-color: var(--eclipse);
 	position: fixed;
   width: 100%;
@@ -512,12 +537,16 @@ border: 2px solid var(--flamingo-);
 }
 
 .header .logo {
-  display: block;
   float: left;
 	padding-top: 15px;
 	margin-top: -0.5em;
   text-decoration: none;
 	position: relative;
+}
+
+.logo img {
+	width: 87%;
+	height: auto;
 }
 
 /* menu */
