--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,8 @@ h2 {
 	color: var(--flamingo-);
 	letter-spacing: 1px;
 	text-align: center;
-	margin: 1em 0 -0.5em 0;
-	padding: 120px 0 40px 0;
+	margin: 0.5em 0 -0.5em 0;
+	padding: 20px 0 40px 0;
 }
 
 h3 {
@@ -226,6 +226,12 @@ button:hover {
 /* cuisine */
 
 /* Cuisine List and Recipe Grid Layout */
+.cuisine-caption {
+	text-align: center;
+	margin-top: 1em;
+	font-weight: 900;
+}
+
 .cuisine-container {
 	display: flex; /* Align the cuisine list and recipes side by side */
 	align-items: flex-start;
@@ -481,11 +487,13 @@ border: 2px solid var(--flamingo-);
 }
 
 .about {
-	display: grid;
-	grid-template-columns: 35% 65%;
-	column-gap: 20px;
-	margin: 1em 5em 5em 5em;
+	display: flex;
+	font-size: 117%;
 	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+	align-items: center;
+	margin: 0 6em;
 }
 
 .about p {
@@ -494,11 +502,10 @@ border: 2px solid var(--flamingo-);
 }
 
 .about-image {
-	width: 100%;
-	height: auto;
-	align-self: center;
-	justify-self: center;
+width: 15%;
+height: auto;
 }
+
 
 /*hamburger menu*/
 
