--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,19 @@ button:hover {
 /* cuisine */
 
 /* Cuisine List and Recipe Grid Layout */
+
+.cuisine-select {
+	display: flex;
+	flex-direction: row-reverse;
+	margin: 0;
+	background-color: aqua; 
+	text-align: center;           /* Optional: Add padding */
+}
+
 .cuisine-caption {
 	text-align: center;
 	margin-top: 1em;
+	margin-bottom: 0;
 	font-weight: 900;
 	font-size: 150%;
 }
@@ -236,22 +246,27 @@ button:hover {
 .cuisine-container {
 	display: flex; /* Align the cuisine list and recipes side by side */
 	align-items: flex-start;
-	gap: 20px;
+	gap: 10px;
 	margin-top: 2em; /* Ensure proper spacing from other elements */
+	margin: 2em;
 }
 
 /* Cuisines List Styling */
 .cuisines-list {
 	flex: 1; /* Allocate space for the list */
-	max-width: 250px; /* Limit the width */
+	max-width: 600px; /* Limit the width */
 	list-style: none; /* Remove bullets */
-	padding: 10px;
-	background-color: var(--pearl-powder); /* Light background */
+	padding: 0;
 	border-radius: 5px;
+	border: 3.5px solid var(--nightlife);
+	margin: 1.5em;
+	background-color: #EAF0FA;
 }
 
 .cuisines-list li {
-	margin-bottom: 10px;
+	margin: 0;
+	margin-left: 20px;
+	padding: 15px 0;
 }
 
 .cuisines-list a {
@@ -264,7 +279,8 @@ button:hover {
 }
 
 .cuisines-list a:hover {
-	color: var(--orchid-); /* Slight color shift on hover */
+	color: var(--eclipse); /* Slight color shift on hover */
+	text-decoration: underline;
 }
 
 /* Recipe Grid Styling */
@@ -486,6 +502,7 @@ border: 2px solid var(--flamingo-);
 
 .ingredients-div {
 	align-items: center;
+
 }
 
 .ingredients-image {
