--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ button:hover {
 /* Cuisine List and Recipe Grid Layout */
 
 .cuisine-select {
-	margin: 0.5em 3em 0 0;
+	margin: 10em 0;
 }
 
 .cuisine-caption {
