--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ footer {
 	background-color: var(--nightlife);
 	font-family: var(--font-title), Arial, Helvetica, sans-serif;
 	padding: 2px;
-	margin: 0; 
+	margin: 4em 0 0 0; 
 }
 
 footer p {
@@ -234,7 +234,7 @@ button:hover {
 /* Cuisine List and Recipe Grid Layout */
 
 .cuisine-select {
-	margin: 10em 0;
+	margin: 7em 3em;
 	font-size: 150%;
 	text-align: center;
 }
@@ -251,8 +251,7 @@ button:hover {
 	display: flex; /* Align the cuisine list and recipes side by side */
 	align-items: flex-start;
 	gap: 10px;
-	margin-top: 2em; /* Ensure proper spacing from other elements */
-	margin: 2em;
+	margin: 2em 1em; 
 }
 
 /* Cuisines List Styling */
@@ -759,7 +758,7 @@ height: auto;
 	.nibbly-container {
     flex-direction: row;
     justify-content: center;
-    margin: 8em 2em;
+    margin: 5em 2em;
   }
   .nibbly-colors {
     margin: 0 2em;
@@ -784,7 +783,7 @@ height: auto;
   .cuisines-list {
     flex: 0 0 25%; 
     background-color: #EAF0FA;
-    padding: 20px;
+    padding: 20px 30px 20px 20px;
     border-radius: 10px;
     border: 3.5px solid var(--nightlife);
   }
