--- a/css/style.css
+++ b/css/style.css
@@ -471,7 +471,7 @@ a.recipe-image img{
 .all-recipe-grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	align-items: top;
+	align-items: flex-start;
 	gap: 30px 20px;
 	margin: 2em 3.5em;
 }
