--- a/css/style.css
+++ b/css/style.css
@@ -30,13 +30,13 @@
 	font-display: swap;
 }
 
-
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
+/* base colors */
 :root {
 	--pearl-powder: #FBFDEC;
 	--eclipse: #0E193E;
@@ -91,7 +91,6 @@ li {
 	line-height: 1.3;
 	padding: 4px;
 	margin-left: 50px;
-
 }
 
 p {
@@ -104,7 +103,7 @@ p {
 	max-width: 115ch;
 }
 
-nav {
+nav { /* nav bar */
 	font-family: var(--font-text);
 	font-size: 200%;
 	text-align: center;
@@ -112,22 +111,25 @@ nav {
 	margin: 2.5em 0 0 0;
 }
 
-a {
+/* link stylings */
+
+a { 
 	text-decoration: none;
 	color: var(--flamingo-);
 	font-family: 'fustat', Arial, Helvetica, sans-serif;
 	font-size: 110%;
 }
 
-a:hover {
+a:hover { 
 	color: var(--orchid-)
 }
 
-a:visited {
+a:visited { 
 	color: var(--flamingo-)
 }
 
-footer {
+/* footer stylings */
+footer { 
 	display: flex;
 	justify-content: center; 
 	align-items: center; 
@@ -138,9 +140,13 @@ footer {
 	margin: 4em 0 0 0; 
 }
 
-footer p {
+footer p { 
 	color: var(--flamingo-);
 	margin: 2.2em 0;
+}
+
+.footer-links {
+	font-size: 180%;
 }
 
 .bottom-text {
@@ -176,10 +182,6 @@ button:hover {
 
 }
 
-.footer-links {
-	font-size: 180%;
-}
-
 /* home page */
 
 .nibbly-container {
@@ -202,7 +204,6 @@ button:hover {
 	justify-content: center;
 	text-align: center;
 }
-
 
 #intro {
 	font-size: 430%;
@@ -229,7 +230,7 @@ button:hover {
 	margin-top: 0.5em;
 }
 
-/* cuisine */
+/* cuisine page */
 
 /* Cuisine List and Recipe Grid Layout */
 
@@ -256,8 +257,8 @@ button:hover {
 
 /* Cuisines List Styling */
 .cuisines-list {
-	flex: 1; /* Allocate space for the list */
-	max-width: 600px; /* Limit the width */
+	flex: 1; 
+	max-width: 600px; 
 	list-style: none; /* Remove bullets */
 	padding: 10px 15px 10px 10px;
 	border-radius: 5px;
@@ -274,7 +275,7 @@ button:hover {
 
 .cuisines-list a {
 	text-decoration: none;
-	color: var(--flamingo-); /* Match your links color */
+	color: var(--flamingo-); 
 	font-family: var(--font-text);
 	font-size: 150%;
 	font-weight: bold;
@@ -282,7 +283,7 @@ button:hover {
 }
 
 .cuisines-list a:hover {
-	color: var(--eclipse); /* Slight color shift on hover */
+	color: var(--eclipse); 
 	text-decoration: underline;
 }
 
@@ -291,8 +292,7 @@ button:hover {
 	text-decoration: underline;
 }
 
-
-/* Recipe Grid Styling */
+/* Recipe Grid Page Styling */
 .recipe-grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -309,7 +309,7 @@ button:hover {
 	padding: 10px;
 	text-decoration: none;
 	color: var(--nightlife);
-	background-color: var(--pearl-powder); /* Light background */
+	background-color: var(--pearl-powder); 
 	transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -362,7 +362,7 @@ a.cuisine {
 }
 
 
-/*no search*/
+/*no search found page stylings */
 
 .nothing-found {
 	display: flex;
@@ -376,26 +376,24 @@ a.cuisine {
 	margin: 0;
 }
 
-/*no search*/
-
 .nav-bar {
 	display: grid;
 	grid-template-columns: 15% 75%;
 	margin: -2.75em 0 1em 0;
 }
 
-hr.solid {
+hr.solid { /* divider stylings */
 	border-top: 2px solid var(--orchid-);
 	border-radius: 4px;
 	margin: 2em 25em 1em 20em;
 }
 
-.bold {
+.bold { /* bold text styling */
 	font-family: var(--font-bold);
 	font-weight: 900;
 }
 
-.search-found {
+.search-found { /* search found text styling */
 	display: flex;
 	justify-content: center;
 	align-self: center;
@@ -403,7 +401,7 @@ hr.solid {
 	margin: 4em;
 }
 
-/*search bar*/
+/*search bar stylings */
 
 .menu {
 	width: 75%;
@@ -447,7 +445,7 @@ form {
 	max-width: 600px; /* Prevent it from becoming too wide */
 }
 
-/*search bar*/
+/* search bar stylings */
 
 .placeholder-image {
 	display: block;
@@ -467,6 +465,8 @@ a.recipe-image img{
 	height: 45%;
 	padding: 10px;
 }
+
+/* all recipes page */
 
 .all-recipe-grid {
 	display: grid;
@@ -498,6 +498,7 @@ transform: scale(1.02);
 border: 2px solid var(--flamingo-);
 }
 
+/* single recipe page */
 
 .recipe-div {
 	display: flex;
@@ -535,6 +536,8 @@ border: 2px solid var(--flamingo-);
 	justify-content: center;
 	margin-bottom: 4em;
 }
+
+/* about page */
 
 .about {
 	display: flex;
@@ -727,7 +730,6 @@ height: auto;
 
 
 /* media queries */
-
 
 /* screens larger than 1200px */
 @media screen and (min-width: 1200px) {
@@ -928,11 +930,11 @@ height: auto;
   }
 
   .recipe-card h3 {
-    font-size: 1.6rem; /* Adjust font size */
+    font-size: 1.6rem;
   }
 
   .recipe-card p {
-    font-size: 1.2rem; /* Adjust font size */
+    font-size: 1.2rem; 
   }
 	.about {
 		display: flex;
